@@ -1,5 +1,5 @@
 CLANG = clang++
-CFLAGS = -Wall -Werror -Wextra # -std=c++98 -fsanitize=address
+CFLAGS = -Wall -Werror -Wextra -g # -std=c++98 -fsanitize=address
 
 SRCS = main.cpp
 HEADERS = vector.hpp
